# quarkcm

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
cmd/connectionmanager/: root.go  version.go
cmd/quarkcni/: quarkcni.go
cmd/quarkcni/app/: worker.go
deploy/: 10-quarkcni.conf  Dockerfile  crd-rdmaingress.yaml  deploy-quarkcm.yaml  node-init.sh  quarkcni.Dockerfile  rdmaingress-testingress.yaml
docs/: design.md
pkg/apis/rdmaingresscontroller/: register.go
pkg/connectionmanager/client/: run.go
pkg/connectionmanager/constants/: constants.go
pkg/connectionmanager/controller/: controller.go  controllerbuilder.go
pkg/connectionmanager/datastore/: datastore.go  datastore_configmap.go  datastore_endpoints.go  datastore_ingress.go  datastore_node.go  datastore_pod.go  datastore_rdmaingress.go  datastore_service.go
pkg/connectionmanager/grpc/: quarkcmsvc.go  quarkcmsvc.pb.go  quarkcmsvc.proto  quarkcmsvc_grpc.pb.go
pkg/connectionmanager/handlers/: configmaphandler.go  endpointshandler.go  handler.go  ingresshandler.go  nodehandler.go  podhandler.go  rdmaingresshandler.go  servicehandler.go
pkg/connectionmanager/objects/: configmapeventobject.go  configmapobject.go  endpointseventobject.go  endpointsobject.go  eventitem.go  ingresseventobject.go  ingressobject.go  nodeeventobject.go  nodeobject.go  podobject.go  (+5 more)
pkg/ipam/: ipam.go
pkg/objects/: netvariables.go
quarkcmclient/: Cargo.toml  build.rs
quarkcmclient/src/: constants.rs  main.rs  rdma_ctrlconn.rs
quarkcmclient/src/svc_client/: mod.rs  node_informer.rs  pod_informer.rs
(+13 files in other folders)
