[package]
name = "quarkcmclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "^0.3"
prost = "0.10"
spin = "0.9.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[build-dependencies]
tonic-build = "0.7"